[package]
name = "vfork"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["vfork"]
description = "vfork-rs is used in embedded low memory to run an external program."
readme = "README.md"
repository = "https://github.com/cppcoffee/vfork-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.148"
